--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,23 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <!-- Main Color -->
+    <color name="main_color">#00CD7E</color>
+
+    <!-- Secondary Colors -->
+    <color name="secondary_color">#C3FF8A</color>
+
+    <!-- Mono Colors -->
+    <color name="black_color">#121814</color>
+    <color name="background_color">#FCA849</color>
+
+    <!-- Gray Colors -->
+    <color name="gray_0">#FFFFFF</color>
+    <color name="gray_100">#EEF4F0</color>
+    <color name="gray_200">#C6CCC8</color>
+    <color name="gray_300">#9EA4A0</color>
+    <color name="gray_400">#757C78</color>
+    <color name="gray_500">#4E5450</color>
+    <color name="gray_600">#262C28</color>
 </resources>
