--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -25,7 +25,7 @@
 
         <action
             android:id="@+id/action_loginFragment_to_signupInfoFragment"
-            app:destination="@id/loginFragment" />
+            app:destination="@id/signupInfoFragment" />
 
         <action
             android:id="@+id/action_loginFragment_to_homeFragment"
