--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -36,8 +36,20 @@
         android:name="com.example.soa.SignUpInfoFragment"
         android:label="회원가입_기본정보입력" />
 
+        <action
+            android:id="@+id/action_signupInfoFragment_to_signupFinishFragment"
+            app:destination="@id/signupFinishFragment" />
 
 
+    <fragment
+        android:id="@+id/signupFinishFragment"
+        android:name="com.example.soa.SignUpFinishFragment"
+        android:label="회원가입_완료" />
+
+        <action
+            android:id="@+id/action_signupFinishFragment_to_loginFragment"
+            app:destination="@id/loginFragment"
+            />
 
 
     <fragment
