--- a/app/src/main/res/layout/layout_identify.xml
+++ b/app/src/main/res/layout/layout_identify.xml
@@ -4,93 +4,106 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <TextView
-        android:id="@+id/txt_step3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/signup_step3"
-        android:fontFamily="@font/pretendard_bold"
-        android:textSize="20sp"
-        android:layout_marginTop="40dp"
-        android:layout_marginStart="43dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
-
     <FrameLayout
-        android:id="@+id/frm_signup_img"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="127dp"
-        android:layout_marginHorizontal="51dp"
-        android:layout_marginBottom="379dp">
+        android:id="@+id/layout_identify"
+        android:layout_width="0dp"
+        android:layout_height="240dp"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginBottom="379dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        >
 
         <ImageView
-            android:id="@+id/bg_signup_file_upload"
+            android:id="@+id/imv_picture_identify"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:src="@drawable/bg_square_gray_14"/>
 
         <TextView
-            android:id="@+id/txt_signup_file_upload"
+            android:id="@+id/tv_picturetext_identify"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/signup_file_upload"
+            android:textColor="@color/gray_200"
             android:fontFamily="@font/pretendard_regular"
             android:textSize="20sp"
             android:layout_gravity="center"/>
     </FrameLayout>
 
-    <ImageView
-        android:id="@+id/ic_signup_camera"
-        android:layout_width="28sp"
-        android:layout_height="28sp"
-        android:src="@drawable/ic_camera"
-        android:layout_marginTop="61sp"
-        android:layout_marginStart="8sp"
-        android:layout_marginEnd="2sp"
-        app:layout_constraintTop_toBottomOf="@id/frm_signup_img"
-        app:layout_constraintStart_toStartOf="@id/frm_signup_img"
-        app:layout_constraintEnd_toStartOf="@id/txt_signup_camera"/>
-    <TextView
-        android:id="@+id/txt_signup_camera"
+    <LinearLayout
+        android:id="@+id/layout_takepicure_identify"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/signup_camera"
-        android:fontFamily="@font/pretendard_regular"
-        android:textSize="20sp"
-        android:layout_marginEnd="35sp"
-        app:layout_constraintStart_toEndOf="@id/ic_signup_camera"
-        app:layout_constraintTop_toTopOf="@id/ic_signup_camera"
-        app:layout_constraintBottom_toBottomOf="@id/ic_signup_camera"/>
+        android:orientation="horizontal"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/view_divide_identify"
+        app:layout_constraintTop_toTopOf="@id/view_divide_identify"
+        app:layout_constraintBottom_toBottomOf="@id/view_divide_identify"
+        >
+
+        <ImageView
+            android:id="@+id/ic_signup_camera"
+            android:layout_width="24sp"
+            android:layout_height="24sp"
+            android:src="@drawable/ic_camera"
+            />
+        <TextView
+            android:id="@+id/txt_signup_camera"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/signup_camera"
+            android:layout_marginStart="5dp"
+            android:fontFamily="@font/pretendard_regular"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            />
+
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:id="@+id/layout_getgallery_identify"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/view_divide_identify"
+        app:layout_constraintTop_toTopOf="@id/view_divide_identify"
+        app:layout_constraintBottom_toBottomOf="@id/view_divide_identify"
+        >
+
+        <ImageView
+            android:id="@+id/ic_signup_gallery"
+            android:layout_width="24sp"
+            android:layout_height="24sp"
+            android:src="@drawable/ic_gallery"
+            />
+
+        <TextView
+            android:id="@+id/txt_signup_gallery"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/signup_gallery"
+            android:layout_marginStart="5dp"
+            android:fontFamily="@font/pretendard_regular"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            />
+
+    </LinearLayout>
+
     
     <View
+        android:id="@+id/view_divide_identify"
         android:layout_width="2dp"
         android:layout_height="34.5sp"
         android:background="#C9C9C9"
-        app:layout_constraintTop_toTopOf="@id/ic_signup_camera"
-        app:layout_constraintBottom_toBottomOf="@id/ic_signup_camera"
-        app:layout_constraintStart_toEndOf="@id/txt_signup_camera"
-        app:layout_constraintEnd_toStartOf="@id/ic_signup_gallery"/>
+        android:layout_marginTop="30dp"
+        app:layout_constraintTop_toBottomOf="@id/layout_identify"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
-    <ImageView
-        android:id="@+id/ic_signup_gallery"
-        android:layout_width="28sp"
-        android:layout_height="28sp"
-        android:src="@drawable/ic_gallery"
-        android:layout_marginStart="19sp"
-        android:layout_marginEnd="7sp"
-        app:layout_constraintTop_toTopOf="@id/ic_signup_camera"
-        app:layout_constraintBottom_toBottomOf="@id/ic_signup_camera"
-        app:layout_constraintEnd_toStartOf="@id/txt_signup_gallery"/>
-    <TextView
-        android:id="@+id/txt_signup_gallery"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/signup_gallery"
-        android:fontFamily="@font/pretendard_regular"
-        android:textSize="20sp"
-        android:layout_marginEnd="27sp"
-        app:layout_constraintEnd_toEndOf="@id/frm_signup_img"
-        app:layout_constraintTop_toTopOf="@id/ic_signup_camera"
-        app:layout_constraintBottom_toBottomOf="@id/ic_signup_camera"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
