--- a/app/src/main/res/layout/layout_signup.xml
+++ b/app/src/main/res/layout/layout_signup.xml
@@ -9,9 +9,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="60dp"
         android:fontFamily="@font/pretendard_semibold"
         android:text="01"
+        android:textColor="@color/main_color"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -24,24 +24,41 @@
         android:fontFamily="@font/pretendard_semibold"
         android:text="기본정보입력"
         android:textSize="20sp"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="@+id/tv_signup_number"
         app:layout_constraintStart_toEndOf="@id/tv_signup_number"
         app:layout_constraintTop_toTopOf="@+id/tv_signup_number" />
 
+    <!-- 컨텐츠 컨테이너 -->
     <LinearLayout
         android:id="@+id/layout_signup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="16dp"
+        android:orientation="vertical"
         android:layout_marginTop="24dp"
-        app:layout_constraintTop_toBottomOf="@+id/tv_signup_number"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        android:layout_marginHorizontal="16dp"
+        android:animateLayoutChanges="true"
+        app:layout_constraintTop_toBottomOf="@id/tv_signup_number"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
+        <!-- 기본정보 -->
         <include
-            android:id="@+id/item_home_plogging"
+            android:id="@+id/include_basic_info"
             layout="@layout/layout_signup_basic_info"
-            app:layout_constraintTop_toBottomOf="@+id/tv_home_title" />
+            android:visibility="visible"/>
+
+        <!-- 아이디/비밀번호 -->
+        <include
+            android:id="@+id/include_id_password"
+            layout="@layout/layout_signup_id_password"
+            android:visibility="gone"/>
+
+        <!-- 신원인증 -->
+        <include
+            android:id="@+id/include_identify"
+            layout="@layout/layout_identify"
+            android:visibility="gone"/>
 
     </LinearLayout>
 
