--- a/app/src/main/res/layout/layout_signup_id_password.xml
+++ b/app/src/main/res/layout/layout_signup_id_password.xml
@@ -1,94 +1,160 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:fillViewport="true">
 
-    <TextView
-        android:id="@+id/tv_signup_nickname"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="닉네임"
-        android:textSize="18sp"
-        android:includeFontPadding="false"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/tv_signup_id"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="아이디"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            android:includeFontPadding="false"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-        android:id="@+id/et_signup_nickname"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:background="@drawable/bg_square_white_grey_14"
-        android:paddingStart="20dp"
-        android:hint="@string/signup_edit_text"
-        android:layout_marginTop="8dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_signup_nickname"/>
+        <EditText
+            android:id="@+id/et_signup_id"
+            android:layout_width="0dp"
+            android:layout_height="48dp"
+            android:background="@drawable/bg_square_white_grey_14"
+            android:paddingStart="20dp"
+            android:hint="@string/signup_edit_text"
+            android:textColor="@color/black"
+            android:textColorHint="@color/gray_400"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="5dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/btn_jungbokcheck"
+            app:layout_constraintTop_toBottomOf="@id/tv_signup_id" />
 
-    <TextView
-        android:id="@+id/tv_signup_id"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:includeFontPadding="false"
-        android:text="아이디"
-        android:textSize="18sp"
-        android:layout_marginTop="15dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/et_signup_nickname" />
+        <FrameLayout
+            android:id="@+id/btn_jungbokcheck"
+            android:layout_width="98dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="5dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/et_signup_id"
+            app:layout_constraintBottom_toBottomOf="@id/et_signup_id">
 
-    <EditText
-        android:id="@+id/et_signup_id"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:background="@drawable/bg_square_white_grey_14"
-        android:paddingStart="20dp"
-        android:hint="@string/signup_edit_text"
-        android:layout_marginTop="8dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_signup_id"/>
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/bg_square_main_fill_14" />
 
-    <TextView
-        android:id="@+id/tv_signup_password"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="비밀번호"
-        android:textSize="18sp"
-        android:includeFontPadding="false"
-        android:layout_marginTop="15dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_signup_id" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:includeFontPadding="false"
+                android:textColor="@color/white"
+                android:text="중복확인"
+                android:textSize="18sp" />
+        </FrameLayout>
 
-    <EditText
-        android:id="@+id/et_signup_password"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:background="@drawable/bg_square_white_grey_14"
-        android:paddingStart="20dp"
-        android:hint="@string/signup_edit_text"
-        android:layout_marginTop="8dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_signup_password"/>
+        <TextView
+            android:id="@+id/tv_available_id"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="사용가능한 아이디입니다."
+            android:textColor="#327AFF"
+            android:fontFamily="@font/pretendard_regular"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="3dp"
+            android:visibility="invisible"
+            app:layout_constraintStart_toStartOf="@id/et_signup_id"
+            app:layout_constraintTop_toBottomOf="@id/et_signup_id" />
 
-    <TextView
-        android:id="@+id/tv_signup_password_check"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="비밀번호 확인"
-        android:textSize="18sp"
-        android:includeFontPadding="false"
-        android:layout_marginTop="15dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_signup_password" />
+        <TextView
+            android:id="@+id/tv_signup_nickname"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:includeFontPadding="false"
+            android:text="닉네임"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            android:layout_marginTop="30dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/et_signup_id" />
 
-    <EditText
-        android:id="@+id/et_signup_password_check"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:background="@drawable/bg_square_white_grey_14"
-        android:paddingStart="20dp"
-        android:hint="@string/signup_edit_text"
-        android:layout_marginTop="8dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_signup_password_check"/>
+        <EditText
+            android:id="@+id/et_signup_nickname"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:background="@drawable/bg_square_white_grey_14"
+            android:paddingStart="20dp"
+            android:hint="@string/signup_edit_text"
+            android:textColor="@color/black"
+            android:textColorHint="@color/gray_400"
+            android:layout_marginTop="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_signup_nickname" />
+
+        <TextView
+            android:id="@+id/tv_signup_password"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="비밀번호"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            android:includeFontPadding="false"
+            android:layout_marginTop="30dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/et_signup_nickname" />
+
+        <EditText
+            android:id="@+id/et_signup_password"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:background="@drawable/bg_square_white_grey_14"
+            android:paddingStart="20dp"
+            android:hint="@string/signup_edit_text"
+            android:textColor="@color/black"
+            android:textColorHint="@color/gray_400"
+            android:layout_marginTop="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_signup_password" />
+
+        <TextView
+            android:id="@+id/tv_signup_password_check"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="비밀번호 확인"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            android:includeFontPadding="false"
+            android:layout_marginTop="30dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/et_signup_password" />
+
+        <EditText
+            android:id="@+id/et_signup_password_check"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:background="@drawable/bg_square_white_grey_14"
+            android:paddingStart="20dp"
+            android:hint="@string/signup_edit_text"
+            android:textColor="@color/black"
+            android:textColorHint="@color/gray_400"
+            android:layout_marginTop="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_signup_password_check" />
+
+        <TextView
+            android:id="@+id/tv_available_pw"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="사용가능한 비밀번호입니다."
+            android:textColor="#327AFF"
+            android:fontFamily="@font/pretendard_regular"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="3dp"
+            android:visibility="invisible"
+            app:layout_constraintStart_toStartOf="@id/et_signup_password_check"
+            app:layout_constraintTop_toBottomOf="@id/et_signup_password_check" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
