chore: 컬러 시스템 추가 #13

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,9 +9,12 @@
     <!-- Secondary Colors -->
     <color name="secondary_color">#C3FF8A</color>
 
+    <!-- Background Colors -->
+    <color name="main_back_color">#F6FFF9</color>
+
     <!-- Mono Colors -->
     <color name="black_color">#121814</color>
-    <color name="background_color">#FCA849</color>
+    <color name="background_color">#FFFFFF</color>
 
     <!-- Gray Colors -->
     <color name="gray_0">#FFFFFF</color>
