--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -65,5 +65,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ic_home_story" />
 
+    <View
+        android:id="@+id/view_line_navi"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginVertical="24dp"
+        android:layout_marginHorizontal="18dp"
+        android:background="@drawable/line_secondary"
+        app:layout_constraintTop_toBottomOf="@id/rv_travel_story"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
 
