--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,6 +8,11 @@
         android:name="com.example.soa.HomeFragment"
         android:label="홈" />
 
+        <action
+            android:id="@+id/action_homeFragment_to_searchFragment"
+            app:destination="@id/searchFragment" />
+
+
     <fragment
         android:id="@+id/scheduleFragment"
         android:name="com.example.soa.ScheduleFragment"
@@ -60,5 +65,10 @@
         <action
             android:id="@+id/action_splashFragment_to_loginFragment"
             app:destination="@id/loginFragment" />
+
+    <fragment
+        android:id="@+id/searchFragment"
+        android:name="com.example.soa.SearchFragment"
+        android:label="검색" />
 
 </navigation>
