--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -37,12 +37,17 @@
         android:textColorHint="@color/gray_300"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ic_home_title" />
+        app:layout_constraintTop_toBottomOf="@id/ic_home_title"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        android:clickable="true"/>
 
     <ImageView
+        android:id="@+id/iv_home_search"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_search"
+        android:layout_marginEnd="12dp"
         app:layout_constraintBottom_toBottomOf="@+id/et_home_search"
         app:layout_constraintEnd_toEndOf="@+id/et_home_search"
         app:layout_constraintTop_toTopOf="@+id/et_home_search" />
