--- a/app/src/main/res/layout/item_home_course.xml
+++ b/app/src/main/res/layout/item_home_course.xml
@@ -146,6 +146,7 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginTop="19dp"
+            android:layout_marginHorizontal="2dp"
             android:background="@drawable/line_secondary"
             app:layout_constraintTop_toBottomOf="@id/rv_travel_story"/>
 
