--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/white"
     tools:context=".SearchFragment">
 
+    <!-- 검색 바 / 뒤로 가기 / 검색 아이콘 -->
     <ImageView
         android:id="@+id/ic_search_back"
         android:layout_width="wrap_content"
@@ -25,6 +27,7 @@
         android:layout_marginTop="50dp"
         android:background="@drawable/bg_gray_100_fill_60"
         android:clickable="false"
+        android:focusable="false"
         android:fontFamily="@font/pretendard_medium"
         android:hint="@string/home_search"
         android:minHeight="44dp"
@@ -40,10 +43,59 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_search"
-        android:paddingStart="100dp"
         android:layout_marginEnd="12dp"
         app:layout_constraintBottom_toBottomOf="@+id/et_search"
         app:layout_constraintEnd_toEndOf="@+id/et_search"
         app:layout_constraintTop_toTopOf="@+id/et_search" />
+
+    <!-- Scrollable 영역 -->
+    <androidx.core.widget.NestedScrollView
+        android:id="@+id/search_scroll_container"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:fillViewport="true"
+        app:layout_constraintTop_toBottomOf="@+id/et_search"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:paddingBottom="16dp">
+
+            <TextView
+                android:id="@+id/tv_search_result"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="17dp"
+                android:layout_marginTop="19dp"
+                android:fontFamily="@font/pretendard_medium"
+                android:text="@string/search_result"
+                android:textSize="16sp"
+                android:textColor="@color/gray_300"
+                android:visibility="gone" />
+
+            <TextView
+                android:id="@+id/tv_search_result_description"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="17dp"
+                android:layout_marginTop="9dp"
+                android:fontFamily="@font/pretendard_semibold"
+                android:text="@string/search_description"
+                android:textSize="16sp"
+                android:visibility="gone" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_search_result"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:paddingHorizontal="16dp"
+                android:visibility="gone" />
+        </LinearLayout>
+    </androidx.core.widget.NestedScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
